[package]
name = "jumplist_win"
version = "0.0.1"
edition = "2021"
description = "A small crate to create and add custom jumplist in windows apps"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_WinRT", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Foundation_Collections", "UI_StartScreen", "UI_Shell", "Win32_System_Com", "Win32_Security", "Win32_System_Registry", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_Devices", "Win32_UI_Shell_PropertiesSystem", "Win32_Storage", "Win32_Storage_EnhancedStorage", "Win32_System_LibraryLoader", "Win32_System_Ole", "Win32_Storage_FileSystem"]


[dependencies]
